# FastAPI-Breast-Cancer-Predictor

./: README.md  main.py  pyproject.toml  render.yaml  requirements.txt
models/: model.pkl  scaler.pkl
notebooks/: 00_origin_model.ipynb  01_client.ipynb
