[build-system]
requires = ["setuptools>=68.0", "wheel", "pip>=23.0"]
build-backend = "setuptools.build_meta"

[project]
name = "breast-cancer-api"
version = "0.1.0"
description = "API para predecir cáncer de mama usando FastAPI y scikit-learn"
authors = [
  { name = "Cristhian Solís", email = "c.solis.m@icloud.com" }
]
requires-python = ">=3.11,<3.12"

[project.dependencies]
fastapi = "0.101.1"
"uvicorn[standard]" = "0.23.1"
aiofiles = "24.1.0"
jinja2 = "3.1.6"
# ML & Data
scikit-learn = "1.2.2"
numpy = "1.24.4"
pandas = "2.0.3"
matplotlib = "3.7.1"
seaborn = "0.13.2"
joblib = "1.2.0"
# Requests
requests = "2.31.0"
# Utilities
pydantic = "2.11.7"